[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/scripts/UI/pauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/UI/optionsPanel.tscn" type="PackedScene" id=2]

[node name="pauseMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -100.0
margin_right = 75.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 193.0

[node name="btn_continue" type="Button" parent="PanelContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 43.0
size_flags_vertical = 3
text = "Continue"

[node name="btn_options" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 136.0
margin_bottom = 91.0
size_flags_vertical = 3
text = "Options"

[node name="btn_MainMenu" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 136.0
margin_bottom = 138.0
size_flags_vertical = 3
text = "Back to Menu"

[node name="btn_Quit" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 136.0
margin_bottom = 186.0
size_flags_vertical = 3
text = "Quit to Desktop"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Quit to Desktop?"

[node name="menu_confirm" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Return to Main Menu?"

[node name="optionsPanel" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="options_opened" from="." to="optionsPanel" method="_on_pauseMenu_options_opened"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="confirmed" from="menu_confirm" to="." method="_on_menu_confirm_confirmed"]
[connection signal="panel_closed" from="optionsPanel" to="." method="_on_optionsPanel_panel_closed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
